--- a/tSIP/_dist/translations/pl_PL/translations.json
+++ b/tSIP/_dist/translations/pl_PL/translations.json
@@ -1,26 +1,28 @@
 {
-  "TfrmMain.btnHangup": "Zakończ",
-  "TfrmMain.btnMakeCall": "Zadzwoń/Odbierz",
-  "TfrmMain.miAbout": "O programie",
-  "TfrmMain.miClearCallsHistory": "Wyczyść historię połączeń",
-  "TfrmMain.miCommonSettings": "Konfiguracja ogólna",
-  "TfrmMain.miExit": "Zakończ",
-  "TfrmMain.miFile": "Plik",
-  "TfrmMain.miHelp": "Pomoc",
-  "TfrmMain.miImportContactsFromCsv": "Importuj kontakty z pliku CSV",
-  "TfrmMain.miImportContactsFromXml": "Importuj kontakty z pliku XML (jak Yealink)",
-  "TfrmMain.miMessages": "Wiadomości tekstowe",
-  "TfrmMain.miMinimizeTray": "Minimizuj do zasobnika",
-  "TfrmMain.miPatchButtonSettings": "Konfiguracja przycisków - patch",
-  "TfrmMain.miScripting": "Skrypt - Lua",
-  "TfrmMain.miSettings": "Ustawienia",
-  "TfrmMain.miSettingsPatch": "Konfiguracja ogólna - patch",
-  "TfrmMain.miTools": "Narzędzia",
-  "TfrmMain.miTroubleshooting": "Rozwiązywanie problemów",
-  "TfrmMain.miView": "Pokaż",
-  "TfrmMain.miViewLog": "Log",
-  "TfrmMain.tsContacts": "Książka tel.",
-  "TfrmMain.tsDialpad": "Klawiatura",
-  "TfrmMain.tsHistory": "Historia",
-  "TfrmMain.miRefreshTranslationFromFile": "Przeładuj plik tłumaczeń"
+  "TfrmMain": {
+    "btnHangup": "Zakończ",
+    "btnMakeCall": "Zadzwoń/Odbierz",
+    "miAbout": "O programie",
+    "miClearCallsHistory": "Wyczyść historię połączeń",
+    "miCommonSettings": "Konfiguracja ogólna",
+    "miExit": "Zakończ",
+    "miFile": "Plik",
+    "miHelp": "Pomoc",
+    "miImportContactsFromCsv": "Importuj kontakty z pliku CSV",
+    "miImportContactsFromXml": "Importuj kontakty z pliku XML (jak Yealink)",
+    "miMessages": "Wiadomości tekstowe",
+    "miMinimizeTray": "Minimizuj do zasobnika",
+    "miPatchButtonSettings": "Konfiguracja przycisków - patch",
+    "miRefreshTranslationFromFile": "Przeładuj plik tłumaczeń",
+    "miScripting": "Skrypt - Lua",
+    "miSettings": "Ustawienia",
+    "miSettingsPatch": "Konfiguracja ogólna - patch",
+    "miTools": "Narzędzia",
+    "miTroubleshooting": "Rozwiązywanie problemów",
+    "miView": "Pokaż",
+    "miViewLog": "Log",
+    "tsContacts": "Książka tel.",
+    "tsDialpad": "Klawiatura",
+    "tsHistory": "Historia"
+  }
 }
