Add TfrmTrayNotifier translations

--- a/tSIP/_dist/translations/pl_PL/translations.json
+++ b/tSIP/_dist/translations/pl_PL/translations.json
@@ -24,5 +24,9 @@
     "tsContacts": "Książka tel.",
     "tsDialpad": "Klawiatura",
     "tsHistory": "Historia"
+  },
+  "TfrmTrayNotifier": {
+    "btnAnswer": "Odbierz",
+    "btnHangup": "Zakończ"
   }
 }
