--- a/tSIP/_dist/translations/pt_BR/translations.json
+++ b/tSIP/_dist/translations/pt_BR/translations.json
@@ -24,5 +24,9 @@
     "tsContacts": "Contatos",
     "tsDialpad": "Teclado",
     "tsHistory": "História"
+  },
+  "TfrmTrayNotifier": {
+    "btnAnswer": "Atender",
+    "btnHangup": "Desligar"
   }
 }
