--- a/tSIP/_dist/translations/en_US/translations.json
+++ b/tSIP/_dist/translations/en_US/translations.json
@@ -24,5 +24,9 @@
     "tsContacts": "Contacts",
     "tsDialpad": "Dialpad",
     "tsHistory": "History"
+  },
+  "TfrmTrayNotifier": {
+    "btnAnswer": "Answer",
+    "btnHangup": "Hangup"
   }
 }
