pt_BR: change miHelp caption from "Socorro" to "Ajuda"

--- a/tSIP/_dist/translations/pt_BR/translations.json
+++ b/tSIP/_dist/translations/pt_BR/translations.json
@@ -7,7 +7,7 @@
     "miCommonSettings": "Configurações",
     "miExit": "Sair",
     "miFile": "Arquivo",
-    "miHelp": "Socorro",
+    "miHelp": "Ajuda",
     "miImportContactsFromCsv": "Importar contatos do arquivo CSV",
     "miImportContactsFromXml": "Importar contatos do arquivo XML",
     "miMessages": "Mensagens",
