Add last SIP reply code/text to call history (JSON + hint)

--- a/tSIP/_dist/translations/en_US/translations.json
+++ b/tSIP/_dist/translations/en_US/translations.json
@@ -1,68 +1,70 @@
 {
-  "TfrmContactEditor": {
-    "btnApply": "Apply",
-    "btnCancel": "Cancel",
-    "caption": "Add/edit contact",
-    "lblCompany": "Company",
-    "lblContactFile": "File",
-    "lblDescription": "Description",
-    "lblNote": "Note",
-    "lblNumber1": "Number #1",
-    "lblNumber2": "Number #2",
-    "lblNumber3": "Number #3"
-  },
-  "TfrmContacts": {
-    "miAdd": "Add",
-    "miDelete": "Delete",
-    "miEdit": "Edit",
-    "multiItemCallText": "Call...",
-    "multiItemMessageText": "Message...",
-    "noNumberUriText": "no number/URI",
-    "singleItemCallText": "Call:",
-    "singleItemMessageText": "Message:"
-  },
-  "TfrmHistory": {
-    "callTimeText": "Call time:",
-    "codecText": "Codec:",
-    "incomingCallText": "Incoming call",
-    "miAddEditPhonebook": "Add/edit phonebook entry",
-    "miCopyNumber": "Copy number",
-    "miHttpQuery": "HTTP query",
-    "miMessage": "Message",
-    "nameNumber": "Name/number",
-    "notCompletedText": "(not completed)",
-    "outgoingCallText": "Outgoing call",
-    "timestamp": "Timestamp",
-    "unansweredText": "(unanswered)"
-  },
-  "TfrmMain": {
-    "btnHangup": "Hangup",
-    "btnMakeCall": "Call/Answer",
-    "miAbout": "About...",
-    "miClearCallsHistory": "Clear calls history",
-    "miCommonSettings": "Settings",
-    "miExit": "Exit",
-    "miFile": "File",
-    "miHelp": "Help",
-    "miImportContactsFromCsv": "Import contacts from CSV file",
-    "miImportContactsFromXml": "Import contacts from XML file",
-    "miMessages": "Messages",
-    "miMinimizeTray": "Minimize to tray",
-    "miPatchButtonSettings": "Patch / update button settings with JSON",
-    "miRefreshTranslationFromFile": "Refresh translations from file",
-    "miScripting": "Script window",
-    "miSettings": "Configuration",
-    "miSettingsPatch": "Patch / update main settings with JSON",
-    "miTools": "Tools",
-    "miTroubleshooting": "Troubleshooting",
-    "miView": "View",
-    "miViewLog": "Log",
-    "tsContacts": "Contacts",
-    "tsDialpad": "Dialpad",
-    "tsHistory": "History"
-  },
-  "TfrmTrayNotifier": {
-    "btnAnswer": "Answer",
-    "btnHangup": "Hangup"
-  }
+   "TfrmContactEditor" : {
+      "btnApply" : "Apply",
+      "btnCancel" : "Cancel",
+      "caption" : "Add/edit contact",
+      "lblCompany" : "Company",
+      "lblContactFile" : "File",
+      "lblDescription" : "Description",
+      "lblNote" : "Note",
+      "lblNumber1" : "Number #1",
+      "lblNumber2" : "Number #2",
+      "lblNumber3" : "Number #3"
+   },
+   "TfrmContacts" : {
+      "miAdd" : "Add",
+      "miDelete" : "Delete",
+      "miEdit" : "Edit",
+      "multiItemCallText" : "Call...",
+      "multiItemMessageText" : "Message...",
+      "noNumberUriText" : "no number/URI",
+      "singleItemCallText" : "Call:",
+      "singleItemMessageText" : "Message:"
+   },
+   "TfrmHistory" : {
+      "callTimeText" : "Call time:",
+      "codecText" : "Codec:",
+      "incomingCallText" : "Incoming call",
+      "miAddEditPhonebook" : "Add/edit phonebook entry",
+      "miCopyNumber" : "Copy number",
+      "miHttpQuery" : "HTTP query",
+      "miMessage" : "Message",
+      "nameNumber" : "Name/number",
+      "notCompletedText" : "(not completed)",
+      "outgoingCallText" : "Outgoing call",
+      "replyCode" : "Reply code:",
+      "replyLine" : "Reply line:",
+      "timestamp" : "Timestamp",
+      "unansweredText" : "(unanswered)"
+   },
+   "TfrmMain" : {
+      "btnHangup" : "Hangup",
+      "btnMakeCall" : "Call/Answer",
+      "miAbout" : "About...",
+      "miClearCallsHistory" : "Clear calls history",
+      "miCommonSettings" : "Settings",
+      "miExit" : "Exit",
+      "miFile" : "File",
+      "miHelp" : "Help",
+      "miImportContactsFromCsv" : "Import contacts from CSV file",
+      "miImportContactsFromXml" : "Import contacts from XML file",
+      "miMessages" : "Messages",
+      "miMinimizeTray" : "Minimize to tray",
+      "miPatchButtonSettings" : "Patch / update button settings with JSON",
+      "miRefreshTranslationFromFile" : "Refresh translations from file",
+      "miScripting" : "Script window",
+      "miSettings" : "Configuration",
+      "miSettingsPatch" : "Patch / update main settings with JSON",
+      "miTools" : "Tools",
+      "miTroubleshooting" : "Troubleshooting",
+      "miView" : "View",
+      "miViewLog" : "Log",
+      "tsContacts" : "Contacts",
+      "tsDialpad" : "Dialpad",
+      "tsHistory" : "History"
+   },
+   "TfrmTrayNotifier" : {
+      "btnAnswer" : "Answer",
+      "btnHangup" : "Hangup"
+   }
 }
