Tools menu: add window with current scripts and plugins variables

--- a/tSIP/_dist/translations/de_DE/translations.json
+++ b/tSIP/_dist/translations/de_DE/translations.json
@@ -56,6 +56,7 @@
     "miMinimizeTray": "In Systray minimieren",
     "miPatchButtonSettings": "Button-Einstellung aus JSON-Datei neu laden",
     "miRefreshTranslationFromFile": "Übersetzung aus Datei neu laden",
+    "miScriptPluginVariables": "Skripte und Plugins-Variablen",
     "miScripting": "Script-Fenster",
     "miSettings": "Konfig",
     "miSettingsPatch": "Einstellungen aus JSON-Datei neu laden",
