--- a/tSIP/_dist/translations/pl_PL/translations.json
+++ b/tSIP/_dist/translations/pl_PL/translations.json
@@ -56,6 +56,7 @@
     "miMinimizeTray": "Minimizuj do zasobnika",
     "miPatchButtonSettings": "Konfiguracja przycisków - patch",
     "miRefreshTranslationFromFile": "Przeładuj plik tłumaczeń",
+    "miScriptPluginVariables": "Zmienne skryptów i pluginów",
     "miScripting": "Skrypt - Lua",
     "miSettings": "Ustawienia",
     "miSettingsPatch": "Konfiguracja ogólna - patch",
