--- a/tSIP/_dist/translations/en_US/translations.json
+++ b/tSIP/_dist/translations/en_US/translations.json
@@ -56,6 +56,7 @@
     "miMinimizeTray": "Minimize to tray",
     "miPatchButtonSettings": "Patch / update button settings with JSON",
     "miRefreshTranslationFromFile": "Refresh translations from file",
+    "miScriptPluginVariables": "Scripts and plugins variables",
     "miScripting": "Script window",
     "miSettings": "Configuration",
     "miSettingsPatch": "Patch / update main settings with JSON",
