--- a/tSIP/_dist/translations/fr_FR/translations.json
+++ b/tSIP/_dist/translations/fr_FR/translations.json
@@ -56,6 +56,7 @@
     "miMinimizeTray": "Minimise dans la barre de tache",
     "miPatchButtonSettings": "Patch / update paramètres boutons JSON",
     "miRefreshTranslationFromFile": "Recharger le fichier de traduction",
+    "miScriptPluginVariables": "Variables des scripts et des plugins",
     "miScripting": "Fenêtre de script",
     "miSettings": "Configuration",
     "miSettingsPatch": "Patch / update paramètres généraux JSON",
