Fix blind transfer edit not showing hint, add translation for hint

--- a/tSIP/_dist/translations/en_US/translations.json
+++ b/tSIP/_dist/translations/en_US/translations.json
@@ -68,6 +68,7 @@
   "TfrmMain": {
     "btnHangup": "Hangup",
     "btnMakeCall": "Call/Answer",
+    "edTransferHint": "Transfer to... [Enter]",
     "miAbout": "About...",
     "miClearCallsHistory": "Clear calls history",
     "miCommonSettings": "Settings",
